--- a/src/main/java/IGU/Loggin.form
+++ b/src/main/java/IGU/Loggin.form
@@ -132,7 +132,7 @@
         <Component class="javax.swing.JLabel" name="jLabel1">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="2" name="C:\Users\Usuario\OneDrive\Documentos\NetBeansProjects\Gastro-Guide\src\main\java\Imagenes\cocina.png"/>
+              <Image iconType="3" name="/IGU/cocina.png"/>
             </Property>
           </Properties>
         </Component>
